Testing Squire injection via iframe

--- a/public/templates/directives/editor.html
+++ b/public/templates/directives/editor.html
@@ -1,4 +1,1 @@
-<textarea ng-model="message"></textarea>
-<div class="editor">
-  {{message}}
-</div>
+<iframe src="/js/vendor/Squire/document.html"></iframe>
